--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Levelup</h1>
-        <h2></h2>
+        <h1>LevelUp Series</h1>
+        <h2>A practical, hands-on approach to improving your dev skills from LaunchPad Lab</h2>
         <a href="https://github.com/LaunchPadLab/levelup" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
