--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Levelup</h1>
-        <p></p>
+        <h1>LevelUp</h1>
+        <p>A practical, hands-on approach for improving your dev skills</p>
 
         <p class="view"><a href="https://github.com/LaunchPadLab/levelup">View the Project on GitHub <small>LaunchPadLab/levelup</small></a></p>
 
